# Sergeant-study-guide

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  INSTRUCTIONS.md  MISSING_PROCEDURES.md  PROJECT-STRUCTURE.md  README.md  STATUS.md  STUDY-GUIDE.md  TODO.md  package-lock.json  package.json  pnpm-lock.yaml  source-manifest.json
assets/: master-practice-exam.md  study-notes.md
docs/: CONTRIBUTING.md  JUNE-MAY-2026-CHANGES.md  MAY-2026-PRACTICE-QUESTIONS.md  PRACTICE-QUESTIONS-JUNE-2026.md  PROCEDURE-UPDATES-2026.md  RUNBOOK.md  UPDATE-INGESTION-COMPLETE.md  data.js  debug.html  env.md  index.html  master-practice-exam.html  quick-reference-cheat-sheet.html  quick-reference-cheat-sheet.md  scripts.md  study-guide-combined.md  study-guide-pdf.html  study-guide.html  sw.js  test.html
mobile/: README.md  pubspec.yaml
scripts/quiz-generator/: config.py  pyproject.toml
scripts/quiz-generator/cli/: app.py
scripts/quiz-generator/cli/commands/: dedup.py  generate.py  validate.py
scripts/quiz-generator/generators/: distractor.py  exam_alert.py  key_term_questions.py  llm_scenarios.py  numeric_recall.py  sergeant_focus.py
scripts/quiz-generator/llm/: claude_backend.py  ollama_backend.py  prompts.py
scripts/quiz-generator/models/: callout.py  chapter_data.py  question.py
scripts/quiz-generator/nypd_quiz_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/quiz-generator/parsers/: callouts.py  key_terms.py  numbers.py  review_questions.py
scripts/quiz-generator/writers/: json_writer.py  markdown_writer.py
src/: index.html  (+1 more)
(+412 files in other folders)
